	PR c++/83116 	* constexpr.c (cxx_eval_call_expression): Only look into 	constexpr_call_table if ctx->strict.

* g++.dg/cpp1y/constexpr-83116.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@255788 138bc75d-0d04-0410-961f-82ee72b054a4